fix: missing background on appStoreSnippet

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -247,6 +247,11 @@ $max-safe-integer: 2147483647;
 	}
 }
 
+/* App store background */
+#appStoreSnippet {
+	background: rgb(0 0 0) !important;
+}
+
 /* Dimitrium's Emporium currency wallet */
 .walletIcon {
 	object-fit: contain;
